# workos-shared

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: MIGRATION.md
tests/: test_anthropic_client.py  test_logger.py  test_openrouter.py  test_webhook.py
workos_shared/: __init__.py  anthropic_client.py  logger.py  openrouter.py  webhook.py
