[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workos-shared"
version = "0.1.0"
description = "Shared modules for Jarvis ecosystem (WorkOS E3)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Grzegorz Golaś" }]
# Hard constraint (E3): zero external dependencies — stdlib only.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["workos_shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
